--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
     <p>Photographer and Web Designer.</p>
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" (click) = "fbLogin()">
       <i class="fa fa-facebook"></i> CONTINUE WITH FACEBOOK
     </button>
   </header>
