--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -39,7 +39,7 @@
     <div class="w3-row-padding" style="margin:0 -16px" #featuresgrid>
       <div class="w3-half">
         <img src="https://img.eztalks.com/how-to/group-chat.jpg" style="width:100%" id = "chat" >
-        <img src="http://www.placonference.org/wp-content/uploads/2017/04/groups.png" style="width:100%" (mouseover)= "onMouseOver($event)">
+        <img src="http://www.placonference.org/wp-content/uploads/2017/04/groups.png" style="width:100%" (mouseover)= "onMouseOver($event)" id= "group-feature">
         <div style = "color: green" id = "group" hidden>
           <h4>GreenAms Messenger</h4>
           <span>Dịch vụ nhắn tin cho các thành viên</span>
@@ -67,13 +67,13 @@
 
     <!-- Testimonials -->
     <h3 class="w3-padding-24">Reputation</h3>
-    <img src="https://www.facebook.com/lantrungsir" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Nguyễn Lân Trung.</span>Author.</p>
    
-    <img src="https://www.facebook.com/huyvuuu" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Vũ Nhật Huy.</span> Designer.</p>
     
-    <img src="https://www.facebook.com/3Te.3420" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Trần Tuấn Thành.</span> GreenAms 6520 CEO.</p>
 
     
