--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -39,8 +39,8 @@
     <div class="w3-row-padding" style="margin:0 -16px" #featuresgrid>
       <div class="w3-half">
         <img src="https://img.eztalks.com/how-to/group-chat.jpg" style="width:100%" id = "chat" >
-        <img src="http://www.placonference.org/wp-content/uploads/2017/04/groups.png" style="width:100%" (mouseover)= "onMouseOver($event)" id= "group-feature">
-        <div style = "color: green" id = "group" hidden>
+        <img src="http://www.placonference.org/wp-content/uploads/2017/04/groups.png" style="width:100%" (mouseover)= "onMouseOver($event)" id= "group">
+        <div style = "color: green" id = "group-feature" hidden>
           <h4>GreenAms Messenger</h4>
           <span>Dịch vụ nhắn tin cho các thành viên</span>
         </div>
