--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,16 +3,6 @@
 </nav>
 
 <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
-<nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar" #navIcon>
-  <a  (click) ="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
-    <i class="fa fa-remove"></i>
-  </a>
-  <div class="w3-bar-block w3-center">
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black">MAIN GROUP</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" >CHAT</a>
-    <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black">SCHEDULE</a>
-  </div>
-</nav>
 
 <!-- Page Content -->
 <div class="w3-main w3-padding-large" style="margin-left:40%">
@@ -43,7 +33,7 @@
           <h4>GreenAms Messenger</h4>
           <span>Dịch vụ nhắn tin cho các thành viên</span>
         </div>
-        <img src="https://www.placonference.org/wp-content/uploads/2017/04/groups.png" style="width:100%" (mouseover)= "onMouseOver($event)" id= "group">
+        <img src="https://d30zbujsp7ao6j.cloudfront.net/wp-content/uploads/2017/07/unnamed.png" style="width:100%" (mouseover)= "onMouseOver($event)" id= "group">
         <div style = "background-color: green; color: black" id = "group-feature" hidden>
           <h4>GreenAms Group</h4>
           <span>Nơi chia sẻ, trao đổi của các thành viên</span>
