--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -71,7 +71,9 @@
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">GREENAMS 6520 SOCIAL MEDIA</h6>
-              <textarea class = "w3-input w3-animate-input"></textarea>
+              <p contenteditable="true" class="w3-border w3-padding">Êu ăn loz rồi</p>
+              <br>
+              <br>
               <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>  Post</button> 
             </div>
           </div>
