--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -66,13 +66,13 @@
 
     <!-- Testimonials -->
     <h3 class="w3-padding-24">Reputation</h3>
-    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/29432447_1896847980614437_1805022240053469095_n.jpg?_nc_cat=0&oh=83ae9b967d4d966baf2408b9431f2080&oe=5B33D2FE" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Nguyễn Lân Trung.</span>Author.</p>
    
-    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/10426327_1444879989136816_3628491965750803458_n.jpg?_nc_cat=0&oh=07fb54dc88bf9a295bf9de5f18c98c4e&oe=5B3E83F5" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Vũ Nhật Huy.</span> Designer.</p>
     
-    <img src="" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
+    <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/14705911_1851267665102856_4357189947060855306_n.jpg?_nc_cat=0&oh=9769bc86d81c60b4cbe8562f03d74981&oe=5B31392A" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
     <p><span class="w3-large w3-text-black w3-margin-right">Trần Tuấn Thành.</span> GreenAms 6520 CEO.</p>
 
     
@@ -81,7 +81,7 @@
 
   <!-- Contact Section -->
   <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
+    <h2>For further info please contact</h2>
     <hr class="w3-opacity">
 
     <div class="w3-section">
