--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -74,7 +74,7 @@
               <p contenteditable="true" class="w3-border w3-padding" id= "newpost">Put the content here. Every one could see it ...</p>
               <br>
               <br>
-              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil" (click) = "setNewPost()"></i> Post</button> 
+              <button type="button" class="w3-button w3-theme" (click) = "setNewPost()"><i class="fa fa-pencil" ></i> Post</button> 
             </div>
           </div>
         </div>
