--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -81,8 +81,7 @@
       </div>
       <div >
         <app-grouppost
-          *ngFor= "let post of posts | upcomingToLatest"
-          [post] = "post"
+          *ngFor= "let post of posts"
         ></app-grouppost>
 
       </div>
