--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -74,7 +74,12 @@
               <p contenteditable="true" class="w3-border w3-padding" id= "newpost">Put the content here. Every one could see it ...</p>
               <br>
               <br>
+              
               <button type="button" class="w3-button w3-theme" (click) = "setNewPost()"><i class="fa fa-pencil" ></i> Post</button> 
+              <label for="file-upload" class="custom-file-upload">
+                <i class="fa fa-cloud-upload"></i> Custom Upload
+            </label>
+            <input id="file-upload" type="file"/>
             </div>
           </div>
         </div>
