--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -73,9 +73,12 @@
               <h6 class="w3-opacity">GREENAMS 6520 SOCIAL MEDIA</h6>
               <p contenteditable="true" class="w3-border w3-padding" id= "newpost">Put the content here. Every one could see it ...</p>
               <br>
-              <span></span>
+              <ul class="w3-ul w3-center">
+               <li *ngFor = "let file of FilesToUpload">{{file.name}}<span (click)="unSelectFile(file.name)" 
+                class="w3-button w3-display-right">&times;</span></li>
+              </ul>
               <br>
-              
+              <br>
               <button type="button" class="w3-button w3-theme" (click) = "setNewPost()"><i class="fa fa-pencil" ></i> Post</button> 
               <label for="file-upload" class="custom-file-upload">
                 <i class="fa fa-cloud-upload"></i>
