--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">GREENAMS 6520 SOCIAL MEDIA</h6>
-              <p contenteditable="true" class="w3-border w3-padding" id= "newpost">Put the content here. Every one could see it ...</p>
+              <p contenteditable="true" class="w3-border w3-padding" id= "newpost" placeholder = "Put the message of the post right here"></p>
               <br>
               <ul class="w3-ul w3-center">
                 <li *ngFor = "let file of FilesToUpload">{{file.name}}</li>
