--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -22,7 +22,7 @@
         <button class="w3-button w3-black w3-display-right" (click)="plusDivs(1)">&#10095;</button>
       </div>
     </div>
-  <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom" (click) = "toggleLike()"><i class="fa fa-thumbs-up"></i>  Like</button> 
+  <button type="button" class="w3-button w3-theme-d1 w3-margin-bottom" (click) = "toggleLike()" id = "button-like"><i class="fa fa-thumbs-up"></i>  Like</button> 
   <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom" (click) =  "showCommentBox()"><i class="fa fa-comment"></i>  Comment</button>
   <div id = "likes" *ngIf = "isLike">
     <a href="#" class="w3-bar-item w3-button"><i class="fa fa-thumbs-up"></i>  {{post.likes.length}} lượt thích</a>
