--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -92,6 +92,7 @@
         <app-grouppost
           *ngFor= "let post of posts" 
           [post]= "post"
+          [currentUser] = "CurrentUser"
         ></app-grouppost>
 
       </div>
