--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -29,7 +29,7 @@
   </div>
   <div id = "comment-box{{post.id}}" hidden>
       <img src="{{currentUser.profile_pic}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:35px">
-      <textarea class = "w3-input w3-animate-input" placeholder="put in here the comment">
+      <textarea class = "w3-input w3-animate-input" placeholder="put in here the comment"></textarea>
       <button class ="w3-button w3-circle w3-ripple w3-btn">+</button>
   </div>
   <div id = "comments" *ngIf = "isComment">
