--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -37,7 +37,7 @@
     <table class="new_comment_table" *ngFor = "let comment of post.comments">
       <tr class="new_comment_row">
         <td class="new_comment_img" ><img src="{{comment.author.profile_pic}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:40px"></td>
-        <td class="new_comment_text" ><h6><b>{{comment.author.name}}</b></h6>: {{comment.message}}
+        <td class="new_comment_text" ><h6><b>{{comment.author.name}}</b></h6><p>{{post.message}}</p>
       </tr>
     </table>
   </div> 
