--- a/src/app/grouppost/grouppost.component.css
+++ b/src/app/grouppost/grouppost.component.css
@@ -4,7 +4,7 @@ clear:left;
 float:none;
 overflow:hidden;
 padding:5px 0 4px 5px;
-width:600px;
+width:100%;
 font: size 14;
 margin:1px 0 0 25px;
 }
@@ -14,7 +14,7 @@ background-color:rgb(18, 231, 46);
 }
 .new_comment_text
 {
-width:520px;
+width:80%;
 margin-top:2px;
 vertical-align:top;
 }
