--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -34,7 +34,7 @@
   </div>
   <div id = "comments" *ngIf = "isComment">
     <!-- list of comments-->
-    <table class="new_comment_table w3-cell" *ngFor = "let comment of post.comments">
+    <table class="new_comment_table w3-cell-row" *ngFor = "let comment of post.comments">
       <tr class="new_comment_row">
         <td class="new_comment_img" ><img src="{{comment.author.profile_pic}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:55px"></td>
         <td class="new_comment_text" ><h6><b>{{comment.author.name}}</b></h6><p>{{comment.message}}</p>
