--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -17,10 +17,10 @@ body {
   }
   
   #frame {
-    width: 95%;
+    width: 100%;
     min-width: 360px;
     max-width: 1000px;
-    height: 92vh;
+    height: 100%;
     min-height: 300px;
     max-height: 720px;
     background: #E6EAEA;
