--- a/src/app/grouppost/grouppost.component.html
+++ b/src/app/grouppost/grouppost.component.html
@@ -37,7 +37,7 @@
     <table class="new_comment_table" *ngFor = "let comment of post.comments">
       <tr class="new_comment_row w3-cell-row">
         <td class="new_comment_img" ><img src="{{comment.author.profile_pic}}" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:55px"></td>
-        <td class="new_comment_text" ><b>{{comment.author.name}}</b>{{comment.message}}
+        <td class="new_comment_text" ><b>{{comment.author.name}}</b><span>{{comment.message}}</span>
       </tr>
     </table>
   </div> 
