--- a/src/app/grouppost/grouppost.component.css
+++ b/src/app/grouppost/grouppost.component.css
@@ -5,6 +5,7 @@ float:none;
 overflow:hidden;
 padding:5px 0 4px 5px;
 width:90%;
+max-width :700px;
 font: size 13;
 margin:1px 0 0 25px;
 }
@@ -14,6 +15,7 @@ background-color:rgb(18, 231, 46);
 }
 .new_comment_text
 {
+max-width : 600px;
 width:85%;
 margin-top:2px;
 vertical-align:top;
