--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -1,24 +1,8 @@
 @import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300');
-
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #27ae60;
-    font-family: "proxima-nova", "Source Sans Pro", sans-serif;
-    font-size: 1em;
-    letter-spacing: 0.1px;
-    color: #32465a;
-    text-rendering: optimizeLegibility;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-    -webkit-font-smoothing: antialiased;
-  }
-  
   #frame {
     width: 100%;
-    min-width: 360px;
+    min-width: 100%;
     max-width: 1000px;
     height: 100%;
     min-height: 300px;
@@ -28,7 +12,7 @@ body {
   @media screen and (max-width: 360px) {
     #frame {
       width: 100%;
-      height: 100vh;
+      height: 100%;
     }
   }
   #frame #sidepanel {
@@ -544,7 +528,7 @@ body {
     color: #435f7a;
   }
   #frame .content .messages {
-    height: auto;
+    height: 100%;
     min-height: calc(100% - 93px);
     max-height: calc(100% - 93px);
     overflow-y: scroll;
