--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -591,7 +591,7 @@
   }
   #frame .content .message-input {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     z-index: 99;
   }
