--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -588,7 +588,7 @@
     }
   }
   #frame .content .message-input {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     z-index: 99;
