--- a/src/app/messenger/messenger.component.css
+++ b/src/app/messenger/messenger.component.css
@@ -1,8 +1,24 @@
 @import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,300');
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #27ae60;
+    font-family: "proxima-nova", "Source Sans Pro", sans-serif;
+    font-size: 14;
+    letter-spacing: 0.1px;
+    color: #32465a;
+    text-rendering: optimizeLegibility;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+    -webkit-font-smoothing: antialiased;
+  }
+  
   #frame {
     width: 100%;
-    min-width: 100%;
+    min-width: 360px;
     max-width: 1000px;
     height: 100%;
     min-height: 300px;
@@ -12,7 +28,7 @@
   @media screen and (max-width: 360px) {
     #frame {
       width: 100%;
-      height: 100%;
+      height: 100vh;
     }
   }
   #frame #sidepanel {
@@ -528,7 +544,9 @@
     color: #435f7a;
   }
   #frame .content .messages {
-    height: 100%;
+    height: auto;
+    min-height: calc(100% - 93px);
+    max-height: calc(100% - 93px);
     overflow-y: scroll;
     overflow-x: hidden;
   }
@@ -557,10 +575,8 @@
   }
   #frame .content .messages ul li.sent img {
     margin: 6px 8px 0 0;
-    float: left;
   }
   #frame .content .messages ul li.sent p {
-    float:left;
     background: #435f7a;
     color: #f5f5f5;
   }
@@ -590,7 +606,7 @@
     }
   }
   #frame .content .message-input {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     z-index: 99;
@@ -599,7 +615,7 @@
     position: relative;
   }
   #frame .content .message-input .wrap input {
-    font-family: "proxima-nova", "Source Sans Pro", sans-serif;
+    font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
     float: left;
     border: none;
     width: calc(100% - 90px);
@@ -641,7 +657,7 @@
     padding: 12px 0;
     cursor: pointer;
     background: #32465a;
-    color: #0fc78a;
+    color: #f5f5f5;
   }
   @media screen and (max-width: 735px) {
     #frame .content .message-input .wrap button {
