--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -18,13 +18,13 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 750px;
+  width: 100%;
   background: #444753;
   border-radius: 5px;
 }
 
 .people-list {
-  width:260px;
+  width:33%;
   float: left;
   
   .search {
