--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -6,7 +6,7 @@
       </div>
       <ul class="list">
         <li class="clearfix" *ngFor = "let key of userKeys">
-          <img src="{{users[key].profile_pic}}" alt="avatar" />
+          <img src="{{users[key].profile_pic}}" alt="avatar" class = "w3-circle"/>
           <div class="about">
             <div class="name">{{users[key].name}}</div>
             <div class="status">
