--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -10,6 +10,7 @@
                     <i class="fa fa-circle {{users[key].realtime}} "></i> {{users[key].realtime}}
                   </div>
                 </div>
+              <hr class="w3-clear">
 		      </div>
         </li>
       </ul>
@@ -17,69 +18,40 @@
     
     <div class="chat">
       <div class="chat-header clearfix">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01_green.jpg" alt="avatar" />
+        <img src="{{users[selectedChatroom.to].profile_pic}}" alt="avatar" />
         
         <div class="chat-about">
-          <div class="chat-with">Chat with Vincent Porter</div>
-          <div class="chat-num-messages">already 1 902 messages</div>
+          <div class="chat-with">Chat with {{users[selectedChatroom.to].name}}</div>
         </div>
         <i class="fa fa-star"></i>
       </div> <!-- end chat-header -->
       
       <div class="chat-history">
         <ul>
-          <li class="clearfix">
-            <div class="message-data align-right">
-              <span class="message-data-time" >10:10 AM, Today</span> &nbsp; &nbsp;
-              <span class="message-data-name" >Olia</span> <i class="fa fa-circle me"></i>
+          <li class="clearfix" *ngFor = "let message of selectedChatroom.messages">
+            <div *ngIf = "if(message.author === currentUser.id); then forme else forother">
+              
+             
+            </div>
+          <ng-template #forme><div class="message-data align-right">
+              <span class="message-data-time" >{{message.time}}</span> &nbsp; &nbsp;
+              <span class="message-data-name" >You</span><i class="fa fa-circle me"></i>
               
             </div>
             <div class="message other-message float-right">
-              Hi Vincent, how are you? How is the project coming along?
+              {{message.text}}
             </div>
+          </ng-template>
+            <ng-template #forother>
+                <div class="message-data">
+                    <span class="message-data-name"><i class="fa fa-circle online"></i> {{users[message.author].name}}</span>
+                    <span class="message-data-time">{{message.time}}</span>
+                  </div>
+                  <div class="message my-message">
+                    {{message.text}}
+                  </div>
+            </ng-template>
           </li>
-          
-          <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-              <span class="message-data-time">10:12 AM, Today</span>
-            </div>
-            <div class="message my-message">
-              Are we meeting today? Project has been already finished and I have results to show you.
-            </div>
-          </li>
-          
-          <li class="clearfix">
-            <div class="message-data align-right">
-              <span class="message-data-time" >10:14 AM, Today</span> &nbsp; &nbsp;
-              <span class="message-data-name" >Olia</span> <i class="fa fa-circle me"></i>
-              
-            </div>
-            <div class="message other-message float-right">
-              Well I am not sure. The rest of the team is not here yet. Maybe in an hour or so? Have you faced any problems at the last phase of the project?
-            </div>
-          </li>
-          
-          <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-              <span class="message-data-time">10:20 AM, Today</span>
-            </div>
-            <div class="message my-message">
-              Actually everything was fine. I'm very excited to show this to our team.
-            </div>
-          </li>
-          
-          <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i> Vincent</span>
-              <span class="message-data-time">10:31 AM, Today</span>
-            </div>
-            <i class="fa fa-circle online"></i>
-            <i class="fa fa-circle online" style="color: #AED2A6"></i>
-            <i class="fa fa-circle online" style="color:#DAE9DA"></i>
-          </li>
-          
         </ul>
         
       </div> <!-- end chat-history -->
