--- a/src/app/messenger/messenger.component.scss
+++ b/src/app/messenger/messenger.component.scss
@@ -165,7 +165,8 @@ body {
   
   .chat-message {
     padding: 30px;
-    
+    position : fixed;
+    bottom : 0px;
     textarea {
       width: 100%;
       border: none;
