--- a/src/app/messenger/messenger.component.html
+++ b/src/app/messenger/messenger.component.html
@@ -1,7 +1,7 @@
 <div class="container clearfix">
     <div class="people-list" id="people-list">
       <ul class="list">
-        <li class="clearfix" *ngFor = "let key of userKeys" (click)= "chooseChatroom(key)" >
+        <li class="clearfix" *ngFor = "let key of userKeys" (click)= "chooseChatRoom(key)" >
           <div *ngIf = "key !== currentUser.id">
                 <img src="{{users[key].profile_pic}}" alt="avatar" class = "w3-circle"/>
                 <div class="about">
@@ -11,7 +11,6 @@
                   </div>
                 </div>
           </div>
-          <hr class="w3-clear">
         </li>
       </ul>
     </div>
